# shrtc

./: Cargo.toml  README.md
src/base/: data.rs  lib.rs  main.rs
src/base/data/: command.rs  file.rs  shortcut.rs
src/commands/about/: main.rs
src/commands/add/: main.rs
src/commands/get/: main.rs
src/commands/github/: main.rs
src/commands/help/: main.rs
src/commands/ls/: main.rs
src/commands/rm/: main.rs
