[package]
name = "shrtc"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.203", features = ["derive"] }
serde_json = "1.0"
#Base command
[[bin]]
name = "shrtc"
path = "src/base/main.rs"

[lib]
name = "base"
path = "src/base/lib.rs"

[[bin]]
name = "shrtc-add"
path = "src/commands/add/main.rs"

[[bin]]
name = "shrtc-rm"
path = "src/commands/rm/main.rs"

[[bin]]
name = "shrtc-get"
path = "src/commands/get/main.rs"

[[bin]]
name = "shrtc-ls"
path = "src/commands/ls/main.rs"


